<resources>
    <string name="app_name">SASTRA NEST</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pwi">PWI</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_toolkit">Toolkit</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_calender">Calender</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_webarch">Web Arch</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_changelog">ChangeLog</string>
    <string name="changelog_no1">1. AlertDialogs has been added to guide the users.</string>
    <string name="changelog_no2">2. ProgressBars are added to notify the loading status</string>

    <string name="about_p1">*This app helps you, my friends to access Parent Web Interface, Toolit, News, Web Archives of SASTRA University at ease.This app is Under development process.If you find any bugs let me know*</string>
    <string name="about_p2">*The Contents of the Website is shown here. The app is not resposible for any content errors*</string>
    <string name="about_p3">*Photo Courtesy: SASTRA Foto Hub*</string>
    <string name="about_p4">*Please give me a Feedback to make the app much more powerful*</string>

    <string name="dev_title">DEVELOPER  DETAILS</string>
    <string name="dev_name1">Developed by </string>
    <string name="dev_name2"> Gavine Joyce</string>
    <string name="dev_Std">II year B.tech IT</string>
    <string name="dev_school">SASTRA University</string>

    <string name="version_title">VERSION</string>
    <string name="version">Version 1.2</string>

    <string name="support">Supports android 3.0 and above</string>
    <string name="feed">Rate me on Google Play and post your feedbacks</string>

    <string name="welcome">Welcome</string>
    <string name="to">to</string>

</resources>
