<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.gavinejoyce.sastranest.About"
    tools:showIn="@layout/activity_about">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <TextView

            android:id="@+id/text12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_p1"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@id/text12"
            android:id="@+id/text121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_p2"
            android:textStyle="italic"
            android:layout_margin="16dp"
            android:textSize="15sp" />
        <TextView
            android:layout_below="@id/text121"
            android:id="@+id/text128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_p3"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="15sp" />
        <TextView
            android:layout_below="@id/text128"
            android:id="@+id/text1289"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_p4"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/text13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_title"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:layout_below="@id/text1289"
            android:textColor="#990000"
            android:textSize="20sp"/>
        <LinearLayout
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/text13">
        <TextView
            android:id="@+id/text22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name1"
            android:textStyle="normal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="15sp"/>
            <TextView
                android:id="@+id/text23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name2"
                android:textStyle="bold"

                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_Std"
            android:textStyle="normal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/text1"
            android:textSize="15sp"  />
        <TextView
            android:id="@+id/text145"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_school"
            android:textStyle="normal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/text14"
            android:textSize="15sp"  />
        <TextView
            android:id="@+id/text15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_title"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:layout_below="@id/text145"
            android:textColor="#990000"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/text16"
            android:layout_below="@id/text15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textStyle="normal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textStyle="normal"
            android:layout_below="@id/text16"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>



        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed"
            android:layout_below="@id/text17"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>
</ScrollView>


