<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.gavinejoyce.sastranest.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/flower"
    android:orientation="vertical">

    <Button
        android:id="@+id/abc"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_pwi"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_button" />
        <Button
            android:id="@+id/abc1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_toolkit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_below="@id/abc"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round1"/>
        <Button
            android:id="@+id/abc2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_news"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#ffffff"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round2"/>
        <Button
            android:id="@+id/calender"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/title_webarch"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/abc2"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round3"/>
    <Button
        android:id="@+id/about"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_about"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_below="@id/calender"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round4"/>
        <Button
            android:id="@+id/buttonn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_feedback"
            android:layout_below="@id/about"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/round5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>


    </RelativeLayout>

