<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.developer.gavinejoyce.sastranest.Splash"
    tools:showIn="@layout/activity_splash"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gnd"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="normal"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#cc3333"/>
    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:layout_below="@id/text8"
        android:textStyle="normal"
        android:layout_marginRight="70dp"
        android:layout_marginEnd="70dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#cc3333"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="italic"
        android:textSize="33sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/text9"
        android:layout_marginTop="8dp"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:textColor="#cc3333"/>

</RelativeLayout>
